<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">StoryApp</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="action_create_account">Create account</string>
    <string name="action_add_stories">Add Story</string>
    <string name="msg_invalid_username">Invalid username</string>
    <string name="msg_invalid_password">Password must be more than 5 characters</string>
    <string name="msg_invalid_email">Invalid email address</string>
    <string name="msg_error_login">"Login error"</string>
    <string name="msg_error_register">"Register error"</string>
    <string name="msg_success_register">"Account registered successfully. Please sign in."</string>
    <string name="msg_no_permission">Cannot get permission.</string>
    <string name="msg_cannot_empty">%1$s cannot be empty</string>
    <string name="add_story">Add story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_picture">Choose picture</string>
    <string name="msg_camera_failed">Camera failed</string>
    <string name="msg_error_take_picture">Error take picture</string>
    <string name="settings">Settings</string>
</resources>